# ai-based-autonomous-soc

./: .gitignore  ARCHITECTURE_AND_USAGE_GUIDE.md  README.md  pyproject.toml  requirements.txt  wazuh-alert.json
app/: config.py  features.py  main.py  model.py  normalize.py  response.py  schemas.py  service.py  storage.py  wazuh_client.py
app/static/: app.js  index.html  styles.css
artifacts/: simulated_attack_report.json
artifacts/pptx/: 01_health.json  02_model_before.json  03_train_demo.json  04_analyze_event.json  05_analyze_raw.json  06_webhook_ingest.json  07_webhook_events.json  08_webhook_event_detail.json  09_train_wazuh_100k_simulated.json  10_bulk_wazuh_100k_simulated.json  11_commands_to_show.txt  12_screenshot_checklist.md  13_real_wazuh_logs_and_blocking_runbook.md
data/: sample_events.json  sample_raw_events.json  wazuh_dashboard_saved_objects.ndjson
scripts/: apply_wazuh_network_source.py  emit_wazuh_network_attacks.py  generate_wazuh_dashboard_ndjson.py  prepare_ppt_artifacts.py  simulate_events.py  simulate_full_attack_flow.py  train_demo_model.py  train_from_cicids.py  wazuh_apply_real_setup.py
tests/: test_cicids_training.py  test_features.py  test_normalize.py  test_persistence.py  test_service.py  test_wazuh_ai_decision.py  test_wazuh_bulk.py  test_wazuh_client.py  test_wazuh_decision_board.py  test_webhook.py
