[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automaticsoc"
version = "0.1.0"
description = "AI-assisted autonomous SOC demo built from the team project concept"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "numpy>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

